--- a/AudioRichPresenceUI/MainWindow.xaml
+++ b/AudioRichPresenceUI/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:AudioRichPresenceUI"
         Title="Audio Rich Presence"
-        Width="380"
+        Icon="logo.png"
+        Width="420"
         Height="410"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
